add a footer link to the source code for the service

--- a/src/main/resources/uk/gov/ida/rp/testrp/views/layout/layout.jade
+++ b/src/main/resources/uk/gov/ida/rp/testrp/views/layout/layout.jade
@@ -92,6 +92,8 @@ html(lang="en")
               li
                 a(href="https://www.gov.uk/contact/govuk") Contact
               li
+                a(href="https://github.com/alphagov/verify-test-rp") Source Code
+              li
                 | Built by the #{''}
                 a(href="https://gds.blog.gov.uk") Government Digital Service
             .open-government-licence
