TfEzFC4W: Implement cross domain Google Analytics tracking for Verify
Add Google Analytics to test-rp

--- a/src/main/resources/uk/gov/ida/rp/testrp/views/layout/layout.jade
+++ b/src/main/resources/uk/gov/ida/rp/testrp/views/layout/layout.jade
@@ -30,6 +30,7 @@ html(lang="en")
   body(class="#{bodyClass}")
 
     script(src='/assets/scripts/js-enabled.js')
+    script(src='/assets/scripts/ga.js')
 
     #skiplink-container
       div
