AUT-14: Start sending log messages to Logit
This change adds Logit service to manifest.yml file so that test-rp can start sending log messages to Logit.

Author: @adityapahuja

--- a/manifest.yml.tmpl
+++ b/manifest.yml.tmpl
@@ -23,3 +23,5 @@ applications:
       ENCRYPTION_CERT: $ENCRYPTION_CERT
       SIGNING_KEY: $SIGNING_KEY
       SIGNING_CERT: $SIGNING_CERT
+    services:
+      - logit-$ENV
