Make test-rp entityId overridable
It's possible to do what we want without this but it's painful.

--- a/manifest-for-msa-backcompat.yml.tmpl
+++ b/manifest-for-msa-backcompat.yml.tmpl
@@ -14,6 +14,7 @@ applications:
       CONFIG_FILE: /app/test-rp/test-rp.yml
       LOG_PATH: /app/test-rp/logs
       LOG_LEVEL: INFO
+      TEST_RP_ENTITY_ID: $TEST_RP_ENTITY_ID
       TEST_RP_URL: https://test-rp-staging-backcompat-${INDEX}.cloudapps.digital
       TEST_RP_MSA_METADATA_URL: http://test-rp-msa-staging-backcompat-${INDEX}.apps.internal:8080/matching-service/SAML2/metadata
       MSA_ENTITY_ID: $MSA_ENTITY_ID
